--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,11 +2,8 @@ version: '3.7'
 
 services:
   server:
-    entrypoint: ["sh", "-c", "java -cp app:app/lib/* br.com.registerpoc.registerapipoc.RegisterApiPocApplication"]
+    entrypoint: ["sh", "-c", "java -cp app:app/lib/* br.com.fourdchallenge.backofficeapi.FourdChallengeApplication"]
     environment:
-      - DATABASE_URL=jdbc:h2:mem:mydb
-      - DATABASE_USER=admin
-      - DATABASE_PW=admin
       - JWT_SECRET=aGc5YTBqZnRlYTFocTd6dXNjbHE4bXE0bm9pZ3F2NGtnN3g1b2FlY243YWdtc3BueDdvMDRsZmM0b3RsZmNrdWt4azRuajFnd3g4M3I2bnl0dHprNWUwemFwYnJzc2J3ZjZ1d2I3ZWZ3OXRiM2F6d3B4emFyZHYyaWgwZmJxNjQ=
       - JWT_EXPIRATION=1440000
       - SPRING_DATA_MONGODB_URI=mongodb://mongo_container:27017/management-api
