--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,18 +6,15 @@ services:
     environment:
       - JWT_SECRET=aGc5YTBqZnRlYTFocTd6dXNjbHE4bXE0bm9pZ3F2NGtnN3g1b2FlY243YWdtc3BueDdvMDRsZmM0b3RsZmNrdWt4azRuajFnd3g4M3I2bnl0dHprNWUwemFwYnJzc2J3ZjZ1d2I3ZWZ3OXRiM2F6d3B4emFyZHYyaWgwZmJxNjQ=
       - JWT_EXPIRATION=1440000
-      - SPRING_DATA_MONGODB_URI=mongodb://mongo_container:27017/management-api
+      - SPRING_DATA_MONGODB_URI=mongodb://mongo_container:27017/backoffice_db
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - CACHE_TTL=300
       - CLIENT_ORIGIN=http://localhost:3000
     ports:
       - '8080:8080'
-
     depends_on:
       - db
       - redis
-
 
   db:
     image: 'mongo'
@@ -34,5 +31,5 @@ services:
     ports:
       - '6379:6379'
     volumes:
-      - ./redis:/data
+      - ./cache:/data
 
